deploy/openshift/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: event-hub
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: event-hub
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
